crates/clan/clan-core/tests/snapshots/transform_golden__indent_overlaps@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	SPK Speaker, LSN Adult
@Options:	CA
@ID:	eng|corpus|SPK|||||Speaker|||
@ID:	eng|corpus|LSN|||||Adult|||
@Comment:	CA overlap points and indexed overlaps
@Comment:	Constructs: overlap_point (top/bottom brackets), indexed overlaps
*SPK:	⌈ one ⌉ ⌈2 two ⌉2 .
*LSN:	⌊ one ⌋ .
*LSN:	        ⌊2 two ⌋2 .
*SPK:	    ⌈ a b⌉ c d .
*LSN:	e f ⌊ g h⌋ .
@End
