crates/clan/clan-core/tests/snapshots/transform_golden__longtier_mor_gra@rust.snap
---
source: crates/talkbank-clan/tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;00.||||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Morphology and grammatical relations tiers
@Comment:	Constructs: mor_dependent_tier, mor_tier_prefix, mor_contents, mor_content, mor_word, mor_pos, mor_lemma, mor_feature, mor_feature_value, mor_post_clitic, gra_dependent_tier, gra_tier_prefix, gra_contents, gra_relation, gra_index, gra_head, gra_relation_name, pipe
*CHI:	it's I want cookies .
%mor:	pron|it~aux|be-Fin-Ind-Pres-S3 pron|I-Prs-Nom-S1 verb|want-Fin-Ind-Pres noun|cookie-Plur .
%gra:	1|4|NSUBJ 2|1|AUX 3|4|NSUBJ 4|0|ROOT 5|4|OBJ 6|4|PUNCT
*MOT:	Mommy will get them .
%mor:	propn|Mommy aux|will verb|get-Inf pron|they-Prs-Acc-Plur .
%gra:	1|3|SUBJ 2|3|AUX 3|0|ROOT 4|3|OBJ 5|3|PUNCT
@End
