crates/clan/clan-core/tests/snapshots/transform_golden__ort_basic@rust.snap
---
source: crates/talkbank-clan/tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;00.|female|typical||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Minimal valid CHAT file with two speakers
@Comment:	Constructs: basic utterances, three standard terminators (. ? !), simple words
*CHI:	I want some biscuits .
%ort:	I want some cookies .
*MOT:	what kind of biscuits ?
%ort:	what kind of cookies ?
*CHI:	the choco ones !
%ort:	the chocolate ones !
*MOT:	we can make some together .
@End
